1. Added simple video library 2. Changed background color to black

--- a/WindowsVideoPlayer/VideoPlayer/MainWindow.xaml
+++ b/WindowsVideoPlayer/VideoPlayer/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:VideoPlayer"
         mc:Ignorable="d"
         Title="MainWindow"
-        WindowStyle="None">
+        WindowStyle="None"
+        Background="Black">
     <Canvas Top="0" Name="MainCanvas">
     </Canvas>
 </Window>
